--- a/skins/mountainview/skin.css
+++ b/skins/mountainview/skin.css
@@ -133,7 +133,7 @@ div#file-specs {background:#E3E9FF none; border-top: 1px solid #DDD;}
 div#file-specs form#fileform input { border-color:#DDD;}
 div#file-specs #info div {color:#000;}
 div#file-specs #info div span {color: #555;}
-div#file-specs #info div.icon.folder{ background-image: url(phpthumb/phpThumb.php?h=140&w=140&src=../skins/mountainview/images/256/folder.png&far=1&bg=0000FF);}
+div#file-specs #info div.icon.folder{ background-image: url(phpthumb/phpThumb.php?h=140&w=140&src=../skins/mountainview/images/256/folder.png&far=1);}
 div#file-specs #info div.filename input {border-color:transparent; color: #555;}
 div#file-specs #info div.filename input:hover {border-color:#ccc;}
 div#file-specs #info div.filetype {color: #555;}
